syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
option go_package = "grpc_stream_server.study/pb";

enum CodeType {
  CHIBI = 0;
  AI = 1;
  GOKU = 2;
}

message Auth {
  string name = 1;
  CodeType code = 2;
}

message CreateTodoRequest {
  // datatype label = priority
  string title = 2;
  string cat = 1;
  Auth auth = 3;
  google.protobuf.Timestamp create_at = 4;
}

message CreateTodoResponse {
  string title = 1;
  string cat = 2;
  Auth auth = 3;
  google.protobuf.Timestamp create_at = 4;
}


